# Autonomous-Robot-Navigation

./: .archive  .gitignore  .gitmodules  Proj_README.md  README.md  README_OLD.md  install.sh  test.py  test.sh
catkin-deps/: CMakeLists.txt  package.xml
final_fsm/: explore.launch  fsm.launch  package.xml
final_fsm/launch/: explore.launch  fsm.launch  screen_record.sh  start.sh
final_fsm/scripts/: explore_controller.py  state_machine_node.py  states.py
final_fsm/src/: state_machine_node.py  states.py
final_nav/: CMakeLists.txt  package.xml
final_nav/config/: costmap_common_params.yaml  dwa copy.yaml  navigation.rviz
final_nav/launch/: move_base.launch  navigation.launch
final_nav/src/: nmpc_controller.py  nmpc_node.py  utils.py
final_percep/: CMakeLists.txt  visual.py
final_percep/launch/: final_percep.launch
final_percep/src/: visual.py
final_pnc/: CMakeLists.txt  graph_planner_plugin.xml  package.xml
final_pnc/config/: navigation.rviz
final_pnc/config/map_params/: costmap_common_params.yaml  global_costmap_params.yaml
final_pnc/config/map_params_local/: costmap_common_params.yaml
final_pnc/config/nav_params/: dwa.yaml  global_planner.yaml  graph_planner.yaml  mpc.yaml  rrt.yaml  teb.yaml
final_pnc/include/final_pnc/: global_planner_node.h
final_pnc/launch/: debug.sh  eval.sh  eval_pnc.sh  move_base.launch  navigation.launch  slam_pnc.launch  test.launch  test_nav.launch  test_nav.sh  test_odom.launch
final_pnc/msg/: ReachGoal.msg
final_pnc/result/theta_star_mpc_04-09_21-30-33/: ac c_rot.npy  acc_trans.npy  result.json  vel_rot.npy  vel_trans.npy
final_pnc/src/: eval_plot.py  eval_pnc.py  eval_traj.py  global_planner_node.cpp  nmpc_controller.py  nmpc_node.py  pub_goal.py  rrt_planner.cpp  rrt_planner_node.cpp  utils.py
final_pnc/src/graph_planner/: a_star.cpp  d_star.cpp  d_star_lite.cpp  graph_planner.cpp  hybrid_a_star.cpp  jump_point_search.cpp  lazy_theta_star.cpp  lpa_star.cpp  s_theta_star.cpp  theta_star.cpp  voronoi.cpp
final_pnc/temp/: curr_params_log.json
final_slam/: CMakeLists.txt  README.md  package.xml
final_slam/.maps/: final_map_2d.pgm  final_map_2d.yaml
final_slam/config/: ME5413_final_2d.lua  ME5413_final_3d.lua  all_sensor_2d.lua  all_sensor_2d_localization.lua  gmapping.rviz  velodyne.yaml
final_slam/launch/: ME5413_final_localization_2d.launch  ME5413_final_mapping_2d.launch  ME5413_final_mapping_3d.launch  all_sensor_localization_2d.launch  amcl.launch  (+11 more)
(+99 files in other folders)
